--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,11 @@
         <activity
             android:name=".LoginActivity" />
         <activity
+            android:name=".RegisterUserActivity" />
+        <activity
             android:name=".MainActivity" />
         <activity
-            android:name=".UserActivity"
-            android:parentActivityName=".MainActivity" />
+            android:name=".UserActivity" />
     </application>
 
 </manifest>
