--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
             android:name=".MainActivity" />
         <activity
             android:name=".UserActivity" />
+        <activity
+            android:name=".MessageActivity" />
     </application>
 
 </manifest>
