Added an animation, popupActivity, six buttons and improved SplashActivity so users don't need to see LoginActivity again unless they signout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:name=".UserActivity" />
         <activity
             android:name=".MessageActivity" />
+        <activity
+            android:name=".PopupActivity"
+            android:theme="@style/AppTheme.PopupTheme" />
     </application>
 
 </manifest>
