--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,16 @@
     <uses-permission
         android:name="android.permission.INTERNET" />
 
+    <uses-permission
+        android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -35,6 +45,8 @@
         <activity
             android:name=".PopupActivity"
             android:theme="@style/AppTheme.PopupTheme" />
+        <activity
+            android:name=".CameraActivity" />
     </application>
 
 </manifest>
