Replaced the animation with a popup menu and added a button to the CameraActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,10 @@
         <activity
             android:name=".MessageActivity" />
         <activity
-            android:name=".PopupActivity"
+            android:name=".Pop_up.PopupActivity"
+            android:theme="@style/AppTheme.PopupTheme" />
+        <activity
+            android:name=".Pop_up.PopupOptionsActivity"
             android:theme="@style/AppTheme.PopupTheme" />
         <activity
             android:name=".CameraActivity" />
